// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Text should have a helptext 1`] = `
<div>
  <div class="form-group"><input class="ddm-field-text form-control" name="textField" type="text" value=""><span class="form-text">Type something</span></div>
</div>
`;

exports[`Field Text should have a label 1`] = `
<div>
  <div class="form-group"><label>label </label><input class="ddm-field-text form-control" name="textField" type="text" value=""></div>
</div>
`;

exports[`Field Text should have a placeholder 1`] = `
<div>
  <div class="form-group"><input class="ddm-field-text form-control" name="textField" type="text" placeholder="Placeholder" value=""></div>
</div>
`;

exports[`Field Text should have a spritemap 1`] = `
<div>
  <div class="form-group"><input class="ddm-field-text form-control" name="textField" type="text" value=""></div>
</div>
`;

exports[`Field Text should have a value 1`] = `
<div>
  <div class="form-group"><input class="ddm-field-text form-control" name="textField" type="text" value="value"></div>
</div>
`;

exports[`Field Text should have an id 1`] = `
<div>
  <div class="form-group"><input class="ddm-field-text form-control" name="textField" type="text" id="ID" value=""></div>
</div>
`;

exports[`Field Text should not be readOnly 1`] = `
<div>
  <div class="form-group"><input class="ddm-field-text form-control" name="textField" type="text" value=""></div>
</div>
`;

exports[`Field Text should not be required 1`] = `
<div>
  <div class="form-group"><input class="ddm-field-text form-control" name="textField" type="text" value=""></div>
</div>
`;

exports[`Field Text should render Label if showLabel is true 1`] = `
<div>
  <div class="form-group"><label>text </label><input class="ddm-field-text form-control" name="textField" type="text" value=""></div>
</div>
`;
